# agents-course-hf

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: nlp_course_01_finetuning.ipynb  nlp_course_02_full_training_loop.ipynb  nlp_course_03_datasets.ipynb  unit_1_dummy_agent.ipynb  unit_2_smolagents.ipynb
scratch/: calculator_tool_eval.ipynb
