[project]
name = "agents-course-hf"
version = "0.1.0"
description = "Code and Notes for the HuggingFace Agents course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
]
