[project]
name = "agents-course-hf"
version = "0.1.0"
description = "Code and Notes for the HuggingFace Agents course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.49.0",
]
