[project]
name = "agents-course-hf"
version = "0.1.0"
description = "Code and Notes for the HuggingFace Agents course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "transformers[torch]>=4.49.0",
]
unit2 = [
    "arize-phoenix>=8.4.1",
    "huggingface-hub>=0.28.1",
    "openinference-instrumentation-smolagents>=0.1.6",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "python-dotenv>=1.0.1",
    "smolagents>=1.9.2",
]
